cha-pre-live-flux2/cha-eks-5a/namespaces/datapr-integration/network-policy-apps.yaml
####################################################
## Allow ingress from datapr-integration and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-datapr-integration
  namespace: datapr-integration
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: datapr-integration
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from datapr-integration ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-datapr-integration
  namespace: datapr-integration
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: datapr-integration

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: datapr-integration
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#########################################
## Allow MySQL Server egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-sql-server
  namespace: datapr-integration
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 3306
      protocol: TCP

################
## ICIS monitoring ##
---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: datapr-integration
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring
